# ssb-befstat-svalbard

./: .gitignore  LICENSE  pyproject.toml
test/: PROC-FORMAT-to-dict.ipynb
